<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLayoutOuter"
    tools:context=".CompanyCardActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_inner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/layout_inner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_company_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Наименование" />

        <TextView
            android:id="@+id/text_contact_details_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_contact_detail_label"
            app:layout_constraintEnd_toStartOf="@+id/cardView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_company_card_name" />

        <TextView
            android:id="@+id/text_website_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_website_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_contact_details_label" />

        <TextView
            android:id="@+id/text_company_card_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            tools:text="-"
            app:layout_constraintStart_toStartOf="@+id/text_website_label"
            app:layout_constraintTop_toBottomOf="@+id/text_website_label" />

        <TextView
            android:id="@+id/text_phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_phone_label"
            app:layout_constraintStart_toStartOf="@+id/text_website_label"
            app:layout_constraintTop_toBottomOf="@+id/text_company_card_website" />

        <TextView
            android:id="@+id/text_company_card_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            tools:text="-"
            app:layout_constraintStart_toStartOf="@+id/text_phone_label"
            app:layout_constraintTop_toBottomOf="@+id/text_phone_label" />

        <TextView
            android:id="@+id/text_coordinates_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_coordinates_label"
            app:layout_constraintStart_toStartOf="@+id/text_phone_label"
            app:layout_constraintTop_toBottomOf="@+id/text_company_card_phone" />

        <TextView
            android:id="@+id/text_company_card_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            tools:text="-"
            app:layout_constraintStart_toStartOf="@+id/text_coordinates_label"
            app:layout_constraintTop_toBottomOf="@+id/text_coordinates_label" />

        <TextView
            android:id="@+id/text_company_card_lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:text="-"
            app:layout_constraintBottom_toBottomOf="@+id/text_company_card_lat"
            app:layout_constraintStart_toEndOf="@+id/text_company_card_lat" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_company_card_name">

            <ImageView
                android:id="@+id/image_company_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_content_desc"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_description_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_description_label">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_company_card_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    tools:text="-"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
